Relya: MVP com correcoes de quota, exportacao, feedback de extracao e configuracao iOS